# vtd

./: .eslintrc.js  .eslintrc.json  .gitignore  README.md  dev-app-update.yml  electron-builder.yml  forge.config.ts  index.html  jest.config.ts  jest.setup.ts  main.js  main.ts  package-lock.json  package.json  preload.js  preload.ts  test.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.setup.ts  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts
.github/workflows/: ci.yml  release.yml
__mocks__/: fileMock.ts
resources/: software_document.md
src/: App.tsx  constants.ts  exampleProject.json  index.css  index.html  index.ts  main.ts  main.tsx  migrationFlags.ts  preload.ts  renderer.ts  templates.ts  types.ts
src-tauri/: Cargo.toml  build_msvc.cmd  copy-ffmpeg-dlls.cmd  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: image.rs  misc.rs  mod.rs  video.rs
src/assets/: base.css  main.css  utility.css
src/components/: dropShadowFilter.ts  element.ts  filter.ts  gradientElement.ts  gradientMenu.test.ts  gradientMenu.ts  imageElement.ts  layersMenu.test.ts  layersMenu.ts  loadingOverlay.ts  mainWindow.ts  sideMenu.ts  textElement.ts  textMenu.test.ts  textMenu.ts  toolMenu.ts  transformBox.test.ts  transformBox.ts  transformMenu.test.ts  transformMenu.ts  types.ts  workArea.ts
src/const/: types.ts
src/contexts/: AlertsContext.tsx  EventBusContext.tsx  LoadingContext.tsx
src/filters/: brightnessContrastFilter.ts  colorCorrectionFilter.ts  (+7 more)
(+156 files in other folders)
