[package]
name = "vtd"
version = "0.1.0"
description = "Editor de miniaturas de videos."
authors = ["Pesterenan"]
license = ""
repository = "https://github.com/Pesterenan/vtd#readme"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-cli = "2.4.1"
tauri-plugin-dialog = "2.7.1"
open = "5.3"
arboard = { version = "3.4", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
clipboard-win = "5.4"

